Standardizes the height of individual profiles in a profile row in the advanced view. Standardizes the distance between individual profiles, both horizontally and vertically in the advanced view. Made the background color an attribute of the individual profile containers instead of the row to prevent color bleed. Standardized the name section style across all profiles, whether or not they take up two lines. Improved styles for the path/breadcrumb display. Removed the bottom border for the last list item of the menu module.

--- a/com_thm_groups/media/css/backend.css
+++ b/com_thm_groups/media/css/backend.css
@@ -2,6 +2,19 @@
     margin-right: .5rem;
 }
 
+[class^="icon-vcard"], [class*=" icon-vcard"] {
+    margin-left: .5rem;
+    margin-right: 0;
+}
+
+#breadcrumbs {
+    margin-top: 1rem;
+}
+
+.module-box ul.menu li:last-child {
+    border-bottom: none;
+}
+
 .sidebar-nav {
     color: #394a59;
 }
