--- a/com_thm_groups/media/css/profile_edit.css
+++ b/com_thm_groups/media/css/profile_edit.css
@@ -2,6 +2,19 @@
     margin-right: .5rem;
 }
 
+[class^="icon-vcard"], [class*=" icon-vcard"] {
+    margin-left: .5rem;
+    margin-right: 0;
+}
+
+#breadcrumbs {
+    margin-top: 1rem;
+}
+
+.module-box ul.menu li:last-child {
+    border-bottom: none;
+}
+
 button, a.btn {
     border: 2px solid #4a5c66;
     font-family: "THM-Regular";
