--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -4,6 +4,22 @@
   margin-right: .5rem;
 }
 
+[class^="icon-vcard"], [class*=" icon-vcard"] {
+  margin-left: .5rem;
+  margin-right: 0;
+}
+
+#breadcrumbs {
+  margin-top: 1rem;
+}
+
+.module-box ul.menu li{
+  &:last-child {
+    border-bottom: none;
+  }
+}
+
+
 //********************************************************************************************************************//
 // Media Queries for Backend
 //********************************************************************************************************************//
